<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/persion_bg_top"
                android:background="@drawable/login_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/persion_bg_heard"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/heard_pic"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </ImageView>


                </RelativeLayout>


            </RelativeLayout>


            <LinearLayout
                android:background="@drawable/bg_my"
                android:id="@+id/persion_line"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <!--优惠卷 -->
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/persion_yhj_line"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/persion_yhj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </ImageView>


                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/persion_yhj_tv"
                        android:gravity="center|left"
                        android:text="@string/yhj"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    </TextView>

                    <ImageView
                        android:id="@+id/persion_next"
                        android:src="@mipmap/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">
                    </ImageView>


                </LinearLayout>

                <!--我的订单 -->
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/persion_order_line"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/persion_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </ImageView>


                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/persion_order_tv"
                        android:gravity="center|left"
                        android:text="@string/order_my"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    </TextView>

                    <ImageView
                        android:src="@mipmap/next"
                        android:id="@+id/persion_next_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">
                    </ImageView>


                </LinearLayout>


                <!--意见反馈 -->
                <LinearLayout
                    android:id="@+id/persion_back_line"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/persion_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </ImageView>


                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/persion_back_tv"
                        android:gravity="center|left"
                        android:text="@string/back"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    </TextView>

                    <ImageView
                        android:src="@mipmap/next"
                        android:id="@+id/persion_back_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">
                    </ImageView>


                </LinearLayout>


                <!--关于我们 -->
                <LinearLayout
                    android:id="@+id/persion_about_line"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/persion_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </ImageView>


                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/persion_about_tv"
                        android:gravity="center|left"
                        android:text="@string/about"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    </TextView>

                    <ImageView
                        android:src="@mipmap/next"
                        android:id="@+id/persion_about_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">
                    </ImageView>


                </LinearLayout>


                <!--退出登录 -->
                <LinearLayout
                    android:id="@+id/persion_login_line"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/persion_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </ImageView>


                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/persion_login_tv"
                        android:gravity="center|left"
                        android:text="@string/loginout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    </TextView>

                    <ImageView
                        android:id="@+id/persion_login_next"
                        android:src="@mipmap/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">
                    </ImageView>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>